--- a/bb/package.json
+++ b/bb/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://localhost:5000",
   "name": "bb",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,6 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "markdown-to-jsx": "^7.1.2",
     "password-hash": "^1.2.2",
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hashtag": "^2.1.2",
+    "react-linkify": "^1.0.0-alpha",
     "react-markdown": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
